# ai4all_robot

hector_models/hector_sensors_description/urdf/: vlp16.urdf.xacro
hector_moveit_gtsp_exploration/: CMakeLists.txt  package.xml
hector_moveit_gtsp_exploration/include/: GTSP_Explorer.h
hector_moveit_gtsp_exploration/launch/: gtsp_explore.launch
hector_moveit_gtsp_exploration/src/: GTSP_Explorer.cpp  gtsp_explorer_node.cpp
hector_moveit_navigation/src/: Navigator.cpp  ai4all_frontier_exploration.py  emmanuel_ai4all_frontier_exploration.py  megan_ai4all_frontier_exploration.py  sahana_ai4all_frontier_exploration.py
hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_velodyne.urdf.xacro
